# watchmen

./: Cargo.toml  README.md  config.toml.sample
sample_file/: helloworld  helloworld.upx
sample_rule/: upx.yara  zip.yara
src/: config.rs  lib.rs  main.rs  scanner.rs
