[package]
name = "watchmen"
version = "0.0.1"
authors = ["n01e0 <noleo@vanillabeans.mobi>"]
edition = "2018"
description = "Monitor files according to YARA rules"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yara = "0.4.1"
clap = "2.33.1"
walkdir = "2.3.1"
